--- a/gallery.html
+++ b/gallery.html
@@ -8,20 +8,29 @@
   <title>Document</title>
   <link rel="stylesheet" href="./styles/layouat.css">
 </head>
+
 <body>
   <h1>Snapshots</h1>
   <ul id="imagegallery">
     <li>
-      <a href="./images/001.jpg" title="001">001号选手</a>
+      <a href="./images/001.jpg" title="001">
+        <img src="./images/001.jpg" alt="001">
+      </a>
     </li>
     <li>
-      <a href="./images/002.jpg" title="002">002号选手</a>
+      <a href="./images/002.jpg" title="002">
+        <img src="./images/002.jpg" alt="002">
+      </a>
     </li>
     <li>
-      <a href="./images/003.jpg" title="003">003号选手</a>
+      <a href="./images/003.jpg" title="003">
+        <img src="./images/003.jpg" alt="003">
+      </a>
     </li>
     <li>
-      <a href="./images/004.jpg" title="004">004号选手</a>
+      <a href="./images/004.jpg" title="004">
+        <img src="./images/004.jpg" alt="004">
+      </a>
     </li>
   </ul>
   <div class="img_box">
@@ -33,4 +42,5 @@
 
   <script src="./scripts/showPic.js" type="text/javascript"></script>
 </body>
+
 </html>
